# mazel

./: .flake8  .gitignore  BUILD.toml  CHANGELOG.rst  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: test.yml
docs/: build-toml.rst  commands.rst  concepts.rst  conf.py  contribute.rst  index.rst  runtimes.rst  why.rst
docs/_templates/: equium.html
docs/make/: best-practices.rst  index.rst  opinionated.rst
mazel/: base.py  exceptions.py  fs.py  git.py  graph.go  graph.py  info.py  label.py  main.py  package.py  types.py  workspace.py
mazel/commands/: clean.py  contrib.py  echo.py  format.py  info.py  label_common.py  run.py  test.py  utils.py
mazel/contrib/: dependabot.py  link_readme.py
mazel/runtimes/: __init__.py  base.py  docker.py  go.py  javascript.py  meteor.py  python.py
tests/: test_fs.py  test_git.py  test_graph.py  test_info.py  test_label.py  test_package.py  test_types.py  test_workspace.py  utils.py
tests/examples/simple_workspace/: WORKSPACE.toml
tests/examples/simple_workspace/nested/package_c/: BUILD.toml  README.md
tests/examples/simple_workspace/package_a/: BUILD.toml  README.md  pyproject.toml
tests/examples/simple_workspace/package_b/: BUILD.toml  README.md  pyproject.toml
tests/test_commands/: test_clean.py  test_echo.py  test_format.py  test_info.py  test_label_common.py  test_run.py  test_test.py  utils.py
tests/test_contrib/: test_dependabot.py  test_link_readme.py
tests/test_runtimes/: test_base.py  test_docker.py  test_go.py  test_javascript.py  test_meteor.py  test_python.py  utils.py
